--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -32,7 +32,7 @@
                 [(ngModel)]="usuario.email"
                 required
                 mode="ios"
-      
+                value="admin@gmodelo.com.mx"
               ></ion-input>
               
             </ion-item>
@@ -44,16 +44,16 @@
                   name="password"
                   [(ngModel)]="usuario.password"
                   required
-        
+                  value="admin"
                 ></ion-input>
               </ion-item>
           </ion-list>
           <ion-button id="btnLogin" expand="full" 
                       type="submit"
-                      [disabled]="formulario.invalid"
+                      
                       color="s1"
                       size="large"
-                      >
+          ><!--[disabled]="formulario.invalid"-->
             Login
           </ion-button>
         </form>
