servicios con foto

--- a/src/app/pages/dashboard3/dashboard3.page.html
+++ b/src/app/pages/dashboard3/dashboard3.page.html
@@ -114,7 +114,7 @@
       <ion-col size="7" class="rejilla">
       <div class="prueba">
         <div class="profile">
-          <img id="imgporfile" [src]="user.photo" alt="">
+          <img id="imgporfile" [src]="(user.photo)" alt="">
         </div>
         <div id="addph" [routerLink]="['/photo-profile']">
           <ion-icon mode="ios" name="add"></ion-icon>
