--- a/src/app/pages/course/course.page.scss
+++ b/src/app/pages/course/course.page.scss
@@ -20,10 +20,26 @@ ion-item.backModule{
 .unitHeader{
     padding: 0 25px;
 }
-
-.unitHeader ion-list-header{
-    border-bottom: 1px solid var(--ion-color-s1);
+.text-module{
+    font-size: 18px;
+    padding: 10px 0 10px 26px;
+    color:#E42600;
+    font-weight: bolder;
     
+}
+
+.unidad{
+    border-bottom: 1px solid var(--ion-color-s1);
+    margin-left:25px;
+    margin-right: 30px;
+    
+}
+
+.unidad-text{
+    font-weight:lighter;
+    font-size: 18px;
+    padding: 10px 0 10px 0px;
+    color:#2A323F;
 }
 
 .units{
