--- a/src/app/pages/dashboard3/dashboard3.page.scss
+++ b/src/app/pages/dashboard3/dashboard3.page.scss
@@ -128,3 +128,10 @@ ion-toolbar{
     margin-top: 10px;
     text-align: center;
 }
+
+#imgporfile{
+    width: 100%;
+    height: 100%;
+    border-radius: 120px;
+    position: relative;
+}
