--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -49,3 +49,11 @@ ion-footer{
 #colLogo{
     margin-top: 50%;
 }
+
+#menssageError{
+    text-align: center;
+    background-color: #FFEDED;
+    color: #A92B2B;
+    padding: 5px;
+    display: none;
+}
