Foto con loading

--- a/src/app/pages/photo-profile/photo-profile.page.html
+++ b/src/app/pages/photo-profile/photo-profile.page.html
@@ -34,7 +34,7 @@
           </button >
       </ion-col>
       <ion-col size="6"  class="ion-padding-horizontal">
-          <button  id="btn-checkmark">    
+          <button  id="btn-checkmark" (click)='declinePhoto()'>    
             <ion-icon style="display:initial"  color="m1" mode="ios"  name="close"></ion-icon>
           </button >
       </ion-col>
